apps/argocd/base/argocd-server-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: argocd
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
